--- a/EXP-MISSION-Youtube/index.html
+++ b/EXP-MISSION-Youtube/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles/nav.css" />
   </head>
   <body>
+    <!-- 헤더 -->
     <section class="header">
       <div class="left-section">
         <img
@@ -29,7 +30,12 @@
       </div>
       <div class="middle-section">
         <div class="search-container">
-          <input type="text" placeholder="검색" class="search-bar" id="searchInput"/>
+          <input
+            type="text"
+            placeholder="검색"
+            class="search-bar"
+            id="searchInput"
+          />
           <button class="search-button" id="searchBtn">
             <img
               src="asset/header/search.svg"
@@ -67,7 +73,7 @@
     </section>
 
     <section class="sidebar" id="sidebar">
-      <!-- 주요 메뉴 -->
+      <!-- 사이드바 -->
       <nav class="sidebar-menu">
         <div class="sidebar-item active">
           <img src="asset/sidebar/home.svg" class="sidebar-icon" />
@@ -139,6 +145,7 @@
     </section>
 
     <div class="main-wrapper">
+      <!-- 영상 네비게이션바 -->
       <section class="nav">
         <button class="nav-arrow left" id="navLeft">&lt;</button>
 
@@ -153,14 +160,21 @@
           <button class="nav-btn" data-category="ASMR">ASMR</button>
           <button class="nav-btn" data-category="랩">랩</button>
           <button class="nav-btn" data-category="애니메이션">애니메이션</button>
-          <button class="nav-btn" data-category="최근에 업로드된 동영상">최근에 업로드된 동영상</button>
-          <button class="nav-btn" data-category="감상한 동영상">감상한 동영상</button>
-          <button class="nav-btn" data-category="새로운 맞춤 동영상">새로운 맞춤 동영상</button>
+          <button class="nav-btn" data-category="최근에 업로드된 동영상">
+            최근에 업로드된 동영상
+          </button>
+          <button class="nav-btn" data-category="감상한 동영상">
+            감상한 동영상
+          </button>
+          <button class="nav-btn" data-category="새로운 맞춤 동영상">
+            새로운 맞춤 동영상
+          </button>
         </div>
 
         <button class="nav-arrow right" id="navRight">&gt;</button>
       </section>
 
+      <!-- 영상 리스트 -->
       <section class="Content">
         <div class="videoContainer"></div>
       </section>
